<resources>
    <string name="app_name">App</string>
    <string name="icon_sales">Sales</string>
    <string name="text_contacts">Контакты</string>
    <string name="text_about">О нас</string>
    <string name="text_main">Главная</string>
    <string name="logo_text_course">Courses</string>
    <string name="logo_text_app">App</string>
    <string name="description_icon_sales">Sales</string>
    <string name="description_icon_category">Category</string>
</resources>