<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:background="@color/asideBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/description_icon_sales"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_hot_deal" />

        <TextView
            android:id="@+id/contacts"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginBottom="100dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/text_contacts"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/icon_sale"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/about"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/text_about"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/contacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/main_text"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/text_main"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/logo_text_courses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/logo_text_course"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logo_text_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="60dp"
        android:text="@string/logo_text_app"
        android:textColor="@color/logo_app"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/logo_text_courses"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/description_icon_category"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/logo_text_courses"
        app:srcCompat="@drawable/ic_filter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/category_Recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_category"
        app:layout_constraintTop_toTopOf="@+id/imageView_category" />

</androidx.constraintlayout.widget.ConstraintLayout>
